--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,6 @@
 NAME=philo
 
-CC=  cc -Wall -Wextra -Werror
+CC=  cc -Wall -Wextra -Werror -pthread
 SRC= main.c \
 	philo_loop.c \
 	philo_utils.c \
